--- a/style.css
+++ b/style.css
@@ -74,8 +74,9 @@ nav ul li a {
   font-weight: 500;
   font-size: 0.9rem;
 }
-.icons {
+#icons {
   display: none;
+  cursor: pointer;
 }
 .main {
   height: 95%;
@@ -240,6 +241,8 @@ footer p {
   font-size: 0.9rem;
 }
 
+/* **** MEDIA QUERIES **** */
+
 @media screen and (max-width: 1060px) {
   .link-space a {
     font-size: 0.9rem;
@@ -248,18 +251,82 @@ footer p {
     font-size: 0.7rem;
   }
 }
-@media screen and (max-width: 850px) {
-  #nav ul {
-    display: none;
-  }
-  #nav .icons {
+@media screen and (max-width: 860px) {
+  #nav #icons {
     display: block;
+  }
+  #icons:before {
+    content: "\2630";
+    font-size: 1.5rem;
+  }
+  .active #icons:before {
+    content: "\2715";
+    font-size: 1.5rem;
+  }
+  nav ul {
+    position: fixed;
+    left: -100%;
+    top: 54px;
+    flex-direction: column;
+    background: rgba(135, 207, 235, 0.656);
+    border: 1px solid #097ca3;
+    border-radius: 10px;
+    width: 80%;
+    text-align: center;
+    transition: 0.25s;
+  }
+  nav li {
+    padding: 3px 0;
+  }
+  nav li:hover {
+    background: rgb(157, 217, 240);
+  }
+  nav.active ul {
+    left: 50%;
+    transform: translateX(-50%);
   }
   .main-text-container {
     transform: translateX(25%);
   }
+  .apropos-text-container {
+    width: 100%;
+  }
+  .apropos-text-container .button-container {
+    justify-content: flex-start;
+  }
+  .button {
+    margin-right: 10px;
+  }
+  .apropos-img-container {
+    display: none;
+  }
+  .competences-container h2 {
+    font-size: 2.1rem;
+    padding-bottom: 20px;
+  }
+  .competences-container h3 {
+    font-size: 1.5rem;
+  }
+  .competences-container ul {
+    padding-bottom: 20px;
+  }
+  .competences-container ul li {
+    font-size: 0.9rem;
+  }
+  .experiences-container h2 {
+    font-size: 2.1rem;
+  }
+  .formation h2 {
+    font-size: 2.1rem;
+  }
+  .formation p {
+    font-size: 0.9rem;
+  }
 }
 @media screen and (max-width: 600px) {
+  .link-space a {
+    font-size: 0.9rem;
+  }
   .main-text-container {
     transform: translateX(10%);
   }
@@ -280,8 +347,53 @@ footer p {
   .main-text-container p {
     font-size: 0.7rem;
   }
-  .main-text-container a {
+  .button {
+    margin-right: 20px;
+  }
+  .button a {
     font-size: 0.7rem;
-    margin-right: 5px;
+  }
+  .apropos-text-container h3 {
+    font-size: 1.5rem;
+  }
+  .apropos-text-container ul li {
+    font-size: 0.9rem;
+  }
+  .apropos-text-container p {
+    font-size: 0.7rem;
+  }
+  .competences-container h2 {
+    font-size: 1.5rem;
+  }
+  .competences-container h3 {
+    font-size: 0.9rem;
+  }
+  .competences-container ul li {
+    font-size: 0.7rem;
+  }
+  .competences-container ul {
+    padding-bottom: 10px;
+  }
+  .exp h3 {
+    font-size: 0.9rem;
+  }
+  .exp p {
+    font-size: 0.7rem;
+  }
+  .experiences-container h2 {
+    font-size: 1.5rem;
+  }
+  .experiences-container h2:last-of-type {
+    font-size: 1.5rem;
+  }
+  .formation p {
+    font-size: 0.7rem;
+  }
+  .contact-container h2,
+  .contact-container h3 {
+    font-size: 1.5rem;
+  }
+  .contact-container a {
+    font-size: 0.9rem;
   }
 }
